--- a/goods.html
+++ b/goods.html
@@ -3,24 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css" />
     <link rel="shortcut icon" href="https://d33pksfia2a94m.cloudfront.net/assets/img/brand/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="goods.css">
     <title>핸드메이드 단추 넥워머 (목도리) : 포스타입 스토어</title>
 </head>
-<body>
-    <div>
-        <header>
-            <div class="header-custom">
+<body class="disable-selection">
+    <div class="blog post-tile-md blog-post bg-gray-0 gray-990 header-is-thin header-size-md header-align-left header-sans-serif post-grid-view series-grid-view header-title-tagline">
+        <a class="sr-only" href="#main">주요 내용으로 건너뛰기</a>
+        <header class="header bg-gray-0">
+            <div class="header-custom bg-gray-0 disabled-on-preview ">
                 <div class="gnb">
                     <div class="container flex-middle">
-                        <a class="gnb-logo" href="https://www.postype.com" title="포스트타입홈"></a>
+                        <a class="gnb-logo btn-icon disabled-on-preview" href="https://www.posttype.com" title="포스타입홈"></a>
+                        <div class="gnb-brand-wrap">
+                            <a class="gnb-brand flex-middle disabled-on-preview" href="https://cottonlinen.postype.com/" title="핸드메이드 작품">
+                                <div class="gnb-title text-truncate">핸드메이드 작품</div>
+                            </a>
+                        </div>
+                        <div class="action-group">
+                            <a class="btn btn-icon disabled-on-preview" href="/search" title="검색">
+                                <i class="fal fa-search"></i>
+                            </a>
+                            <button id="user-menu-toggle" class="btn btn-icon disabled-on-preview" tpye="button" title="메뉴">
+                                <i class="fal fa-user"></i>
+                            </button>
+                        </div>
                     </div>
-                    <div></div>
                 </div>
-                <div></div>
+                <div class="header-image" style="background-image: url(''); background-repeat:no-repeat; background-size: cover; background-position: center; display: none;"></div>
+                <div class="container"></div>
             </div>
-            <div></div>
-            
+            <div class="lnb navbar body-custom gray-990 bg-gray-0">
+                <div class="container">
+                    <div class="navbar-left">
+                        <a class="btn btn-icon btn-back disabled-on-preview" href=""> 
+                            <!-- 해당 부분에서 호출 주소가 js로 구성 -->
+                            <i class="fal fa-chevron-left"></i>
+                        </a>
+                    </div>
+                    <div class="navbar-center pager-btn-group">
+                        <div class="navbar-title-wrap">
+                            <div class="navbar-title text-truncate">
+                                <span>핸드메이드 단추 넥워머 (목도리)</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="navbar-right action-group">
+                        <div class="dropdown">
+                            <a class="btn btn-icon" href="#" data-toggle="dropdown" title="더보기">
+                                <i class="fal fa-cog"></i>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <form class="font-size-setting dropdown-item" action="https://cottonlinen.postype.com/goods/16027536">
+                                    <label for="font-size-setting" class="sr-only">글자크기</label>
+                                    <div class="dropdown-btn-group flex-middle">
+                                        <button type="button" class="btn btn-minify">
+                                            <i class="fal fa-minus"></i>
+                                        </button>
+                                        <span class="font-icon">가</span>
+                                        <button type="button" class="btn btn-enlarge">
+                                            <i class="fal fa-plus"></i>
+                                        </button>
+                                    </div>
+                                </form>
+                                <div class="dropdown-divider"></div>
+                                    <form class="background-setting dropdown-item" action="https://cottonlinen.postype.com/goods/16027536">
+                                        <label for="background-setting" class="sr-only">배경</label>
+                                        <div class="dropdown-btn-group">
+                                            <button type="button" class="btn btn-bg-gray-0 active">
+                                                <span class="sr-only">흰색</span>
+                                            </button>
+                                            <button type="button" class="btn btn-bg-black" id="background-black">
+                                                <span class="sr-only">검은색</span>
+                                            </button>
+                                        </div>
+                                    </form>
+                                <div class="dropdown-divider"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </header>
     </div>
     
