--- a/goods.html
+++ b/goods.html
@@ -128,7 +128,26 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="dropdown" style="display: block; top: 364px"></div>
+                            <div class="dropdown" style="display: block; top: 364px">
+                                <div id="option-list", data-toggle="dropdown" role="button">
+                                    "옵션을 선택해주세요. "
+                                    <i class="far fa-chevron-down float-right mr-1"></i>
+                                    <i class="far fa-chevron-up float-right mr-1"></i>
+                                </div>
+                                <div class="dropdown-menu" id ="dropdown-list">
+                                    <div class="dropdown-item-wrapper">
+                                        <div class="dropdown-item " data-thumbnail="https://d3mcojo3jv0dbr.cloudfront.net/2024/01/14/21/54/245deb9bc81a85628ef963e863fac054.png?w=64&h=64&q=65" data-title="핸드메이드 단추 넥워머">
+                                            <div class="store-image-wrapper">
+                                                <img class="avatar" src="https://d3mcojo3jv0dbr.cloudfront.net/2024/01/14/21/54/245deb9bc81a85628ef963e863fac054.png?w=64&h=64&q=65">
+                                            </div>
+                                            <div class="content">
+                                                <div class="option-title">핸드메이드 단추 넥워머</div>
+                                                <div class></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="select-wrapper"></div>
                             <div class="submit-wrapper"></div>
                         </div>
