--- a/goods.html
+++ b/goods.html
@@ -7,13 +7,24 @@
     <link rel="shortcut icon" href="https://d33pksfia2a94m.cloudfront.net/assets/img/brand/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="goods.css">
     <title>핸드메이드 단추 넥워머 (목도리) : 포스타입 스토어</title>
+    <style class="vjs-styles-defaults">
+      .video-js {
+        width: 300px;
+        height: 150px;
+      }
+
+      .vjs-fluid {
+        padding-top: 56.25%
+      }
+    
+    </style>
 </head>
 <body class="disable-selection">
     <div class="blog post-tile-md blog-post bg-gray-0 gray-990 header-is-thin header-size-md header-align-left header-sans-serif post-grid-view series-grid-view header-title-tagline">
         <a class="sr-only" href="#main">주요 내용으로 건너뛰기</a>
         <header class="header bg-gray-0">
             <div class="header-custom bg-gray-0 disabled-on-preview ">
-                <div class="gnb">
+                <div id="gnb" class="gnb">
                     <div class="container flex-middle">
                         <a class="gnb-logo btn-icon disabled-on-preview" href="https://www.posttype.com" title="포스타입홈"></a>
                         <div class="gnb-brand-wrap">
@@ -142,16 +153,28 @@
                                             </div>
                                             <div class="content">
                                                 <div class="option-title">핸드메이드 단추 넥워머</div>
-                                                <div class></div>
+                                                <div class="option-stock">
+                                                    <span style="color: #FF3B30"></span>
+                                                </div>
+                                                <div class="option-price">22,000원</div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="select-wrapper"></div>
-                            <div class="submit-wrapper"></div>
+                            <div class="select-wrapper">
+                                <div class="selected-list"></div>
+                                <div class="total-summary" style="display: none;">
+                                    <div class="title">주문금액</div>
+                                    <div class="total-amount"></div>
+                                </div>
+                            </div>
+                            <div class="submit-wrapper">
+                                <button type="button" id="desktop-submit-goods" class="btn btn-strong">주문하기</button>
+                            </div>
                         </div>
                     </div>
+                    <div class="header-responsive"></div>
                 </article>
             </div>
         </main>
