--- a/post.html
+++ b/post.html
@@ -10,11 +10,81 @@
 </head>
 <body>
     <div class="blog">
+        <!-- 헤더 부분 -->
         <header class="header">
             <div class="header-custom">
+                <!-- 헤더 상단 부분 -->
                 <div class="custom-gnb">
                     <div class="custom-gnb-container">
                         <a class="custom-gnb-logo" href="https://www.postype.com" title="포스타입 홈"></a>
+                        <div class="custom-gnb-brand-wrap">
+                            <a class="custom-gnb-brand-middle" href="https://saju-halang.postype.com" title="사주팔자 명리학을 통해 나를 들여다보기">
+                                <div class="custom-gnb-brand-title">
+                                    사주팔자 명리학을 통해 나를 들여다보기
+                                </div>
+                            </a>
+                        </div>
+                        <div class="custom-gnb-action-group">
+                            <a class="custom-gnb-action-btn-icon" href="/search" aria-label="검색" title="검색">
+                                <i class="custom-gnb-action-fa-search"></i>
+                            </a>
+                            <button class="custom-gnb-action-user-menu" type="button" aria-label="메뉴" title="메뉴">
+                                <i class="custom-gnb-action-fa-user"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- 헤더 이미지? -->
+                <div class="custom-header-image" style="background-image: url('https://d2ufj6gm1gtdrc.cloudfront.net/2023/12/08/14/03/67892abb1102ccf0aff649ed0ceec427.jpeg?w=1600&q=90'); background-repeat:no-repeat; background-size: cover; background-position: center; display: block;"></div>
+                <!-- 헤더 선? -->
+                <div class="custom-container"></div>
+            </div>
+            <!-- 헤더 하단 부분 -->
+            <div class="header-body-custom">
+                <div class="header-body-custom-container">
+                    <!-- 왼쪽 -->
+                    <div class="body-custom-navbar-left">
+                        <a class="navbar-left-btn-back" href="javascript:void(0);" data-series-url="https://saju-halang.postype.com/series/1202208/사주팔자의기본용어알기" aria-label="사주팔자의 기본용어 알기" title="사주팔자의 기본용어 알기">
+                            <i class="navbar-left-btn-back-chevron"></i>
+                        </a>
+                    </div>
+                    <!-- 가운
+                        데 -->
+                    <div class="body-custom-navbar-center">
+                        <div class="navbar-center-title-wrap">
+                            <div class="navbar-center-title">
+                                <span>사주팔자의 기본 용어 알기 1</span>
+                            </div>
+                            <div class="navbar-center-subtitle">
+                                <a href="https://saju-halang.postype.com/series/1202208/사주팔자의기본용어알기">사주팔자의 기본용어 알기</a>
+                            </div>
+                        </div>
+                        <div class="navbar-center-title-btn-prev">
+                            <i class="center-title-btn-caret-left"></i>
+                        </div>
+                        <a class="navbar-center-title-btn-next" href="https://saju-halang.postype.com/post/15819150" aria-label="다음화" title="다음글 - 사주팔자의 기본 용어 알기 2">
+                            <i class="center-title-btn-caret-right"></i>
+                        </a>
+                    </div>
+                    <div class="body-custom-navbar-right">
+                        <button class="navbar-right-btn-like" type="button" data-post-id="15814749" aria-label="좋아요" title="좋아요">
+                            <i class="btn-like-heart-default"></i>
+                            <i class="btn-like-heart-active"></i>
+                        </button>
+                        <a class="navbar-right-btn-scrap" href="#" data-post-id="15814749" aria-label="스크랩에 추가" title="스크랩에 추가">
+                            <i class="right-btn-scrap-bookmark-default"></i>
+                            <i class="right-btn-scrap-bookmark-active"></i>
+                        </a>
+                        <div class="navbar-right-dropdown">
+                            <a class="right-dropdown-post-options" href="#" data-toggle="dropdown" aria-expanded="false" aria-label="더보기" title="더보기">
+                                <i class="right-dropdown-post-options-cog"></i>
+                            </a>
+                            <div class="right-dropdown-menu" aria-labelledby="post-options">
+                                <form class="right-dropdown-font-size" action="https://saju-halang.postype.com/post/15814749">
+                                    <label class="right-dropdown-font-size" for="right-dropdown-font-size"></label>
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
