--- a/goods.html
+++ b/goods.html
@@ -73,7 +73,65 @@
         <main class="main-body-custom">
             <div class="main-content">
                 <article class="select-goods">
-                    <div class="main-post-block"></div>
+                    <div class="main-post-block">
+                        <div class="post-thumnail-section">
+                            <div class="post-thumnail-wrapper">
+                                <img class="thumnail-image" src="https://d3mcojo3jv0dbr.cloudfront.net/2024/01/14/21/53/f30b6f0d78ec42d7252cb1f23df94763.png?w=716&h=536&q=65" data-width="1280" data-height="960">
+                            </div>
+                        </div>
+                        <div class="post-summary-section">
+                            <div class="summary-title-section">
+                                <div class="sell-group">
+                                    <div class="sell">판매중</div>
+                                </div>
+                                <h1 class="summary-title">핸드메이드 단추 넥워머 (목도리)</h1>
+                            </div>
+                            <div class="summary-middle-section">
+                                <a class="middle-preview-icon" href="https://www.postype.com/profile/@81zrl1">
+                                    <img class="preview-img" src="https://d3mcojo3jv0dbr.cloudfront.net/2022/12/06/02/19/b5a89aa9511b45bfe629c377eb19e8c3.jpeg?w=64&h=64&q=65">
+                                </a>
+                                <div class="middle-body">
+                                    <div class="middle-body-text">
+                                        <a class="middle-body-test-link" href="https://www.postype.com/profile/@81zrl1">주문제작 휴식중</a>
+                                    </div>
+                                    <div class="middle-body-text-date">
+                                        <span class="create-date">
+                                            등록일
+                                            <time class="time-item">2024.01.14</time>
+                                        </span>
+                                        <span class="view-count">
+                                            조회
+                                            <span class="view-number">83</span>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="out-icon-section">
+                                    <button class="out-icon-button" title="넥워머">
+                                        <i class="out-icon"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="list-dropdown" style="display: block; top: 364px;">
+                                <div class="list-option" role="button">
+                                    옵션을 선택해주세요.
+                                    <i class="down-icon"></i>
+                                    <i class="up-list"></i>
+                                </div>
+                            </div>
+                            <div class="select-wrap">
+                                <div class="select-list"></div>
+                                <div class="select-total" style="display: none;">
+                                    <div class="order-title">주문 금액</div>
+                                    <div class="order-total"></div>
+                                </div>
+                            </div>
+                            <div class="submit-wrap">
+                                <button class="button-strong">주문하기</button>
+                                
+
+                            </div>
+                        </div>
+                    </div>
                 </article>
             </div>
         </main>
