--- a/post.html
+++ b/post.html
@@ -45,11 +45,10 @@
                     <!-- 왼쪽 -->
                     <div class="body-custom-navbar-left">
                         <a class="navbar-left-btn-back" href="javascript:void(0);" data-series-url="https://saju-halang.postype.com/series/1202208/사주팔자의기본용어알기" aria-label="사주팔자의 기본용어 알기" title="사주팔자의 기본용어 알기">
-                            <i class="navbar-left-btn-back-chevron"></i>
+                            <i class="fal fa-chevron-left"></i>
                         </a>
                     </div>
-                    <!-- 가운
-                        데 -->
+                    <!-- 가운데 -->
                     <div class="body-custom-navbar-center">
                         <div class="navbar-center-title-wrap">
                             <div class="navbar-center-title">
@@ -60,10 +59,11 @@
                             </div>
                         </div>
                         <div class="navbar-center-title-btn-prev">
-                            <i class="center-title-btn-caret-left"></i>
+                            <i class="fas fa-caret-left">
+                            </i>
                         </div>
                         <a class="navbar-center-title-btn-next" href="https://saju-halang.postype.com/post/15819150" aria-label="다음화" title="다음글 - 사주팔자의 기본 용어 알기 2">
-                            <i class="center-title-btn-caret-right"></i>
+                            <i class="fas fa-caret-right"></i>
                         </a>
                     </div>
                     <div class="body-custom-navbar-right">
@@ -81,14 +81,41 @@
                             </a>
                             <div class="right-dropdown-menu" aria-labelledby="post-options">
                                 <form class="right-dropdown-font-size" action="https://saju-halang.postype.com/post/15814749">
-                                    <label class="right-dropdown-font-size" for="right-dropdown-font-size"></label>
+                                    <label class="right-dropdown-font-size-setting" for="right-dropdown-font-size">글자 크기</label>
+                                    <div class="right-dropdown-btn-group">
+                                        <button class="right-dropdown-btn-minify" type="button">
+                                            <i class="right-dropdown-btn-minus"></i>
+                                        </button>
+                                        <span class="right-dropdown-font-icon">가</span>
+                                        <button class="right-dropdown-btn-enlarge">
+                                            <i class="right-dropdown-btn-enlarge-plus"></i>
+                                        </button>
+                                    </div>
                                 </form>
+                                <div class="right-dropdown-divider"></div>
+                                <form class="right-dropdown-backgroun-setting-item" action="https://saju-halang.postype.com/post/15814749">
+                                    <label class="right-dropdown-backgroun-setting" for="right-dropdown-btn-group">배경</label>
+                                    <div class="right-dropdown-backgroun-setting-divider">
+                                        <button class="backgroun-setting-divider-btn-bg" type="button">
+                                            <span>흰색</span>
+                                        </button>
+                                        <button class="backgroun-setting-divider-btn-black" type="button">
+                                            <span>검은색</span>
+                                        </button>
+                                    </div>
+                                </form>
+                                <div class="right-dropdown-backgroun-divider"></div>
                             </div>
                         </div>
+                        <button class="navbar-right-episodes-toggle" type="button" aria-label="회차 목록">회차 목록</button>
                     </div>
                 </div>
             </div>
         </header>
+        <!-- 메인 부분 -->
+        <main class="main">
+
+        </main>
     </div>
 </body>
 </html>
